--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,37 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.10</version>
+        </dependency>
+
     </dependencies>
+    <profiles>
+        <profile>
+            <id>test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.14.1</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <!--<suiteXmlFile>resources/testng/maven_babyAndFamilyStore_smoke_${suite}_TestNG.xml</suiteXmlFile>-->
+                                <suiteXmlFile>resources/testng/TestNG.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+                            <!--<systemPropertyVariables>-->
+                            <!--<browser>${browser}</browser>-->
+                            <!--</systemPropertyVariables>-->
+                            <argLine>-Dfile.encoding=UTF-8</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 
 </project>
