--- a/pom.xml
+++ b/pom.xml
@@ -8,29 +8,39 @@
     <artifactId>webtest-0</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>3.0.1</version>
-        </dependency>
+    <parent>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>plugin</artifactId>
+        <version>2.2</version>
+    </parent>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
+    <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>org.seleniumhq.selenium</groupId>-->
+            <!--<artifactId>selenium-java</artifactId>-->
+            <!--<version>3.0.1</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>junit</groupId>-->
+            <!--<artifactId>junit</artifactId>-->
+            <!--<version>4.12</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.10</version>
         </dependency>
-
+    <!--<test name="BootCheck" parallel="false" thread-count="1">-->
+        <!--<classes>-->
+            <!--<class name="com.x.automation.y.tests.smoke.BootCheck" />-->
+        <!--</classes>-->
+    <!--</test>-->
     </dependencies>
     <profiles>
         <profile>
-            <id>test</id>
+            <id>default</id>
             <build>
                 <plugins>
                     <plugin>
