--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,14 @@
     <artifactId>webtest-0</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <parent>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>plugin</artifactId>
-        <version>2.2</version>
-    </parent>
+
+
+
+    <!--<parent>-->
+        <!--<groupId>org.jenkins-ci.plugins</groupId>-->
+        <!--<artifactId>plugin</artifactId>-->
+        <!--<version>2.2</version>-->
+    <!--</parent>-->
 
     <dependencies>
         <!--<dependency>-->
@@ -26,6 +29,12 @@
             <!--<artifactId>junit</artifactId>-->
             <!--<version>4.12</version>-->
         <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>plugin</artifactId>
+            <version>2.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
