--- a/pom.xml
+++ b/pom.xml
@@ -1,76 +1,122 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.kamilburansky</groupId>
-    <artifactId>webtest-0</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-
-
-
-    <!--<parent>-->
-        <!--<groupId>org.jenkins-ci.plugins</groupId>-->
-        <!--<artifactId>plugin</artifactId>-->
-        <!--<version>2.2</version>-->
-    <!--</parent>-->
-
+    <artifactId>swebtest-0</artifactId>
+    <version>1</version>
+    <name>sample-maven-build</name>
+    <build>
+        <!-- Source directory configuration -->
+        <sourceDirectory>src</sourceDirectory>
+        <plugins>
+            <!-- Following plugin executes the testng tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <!-- Suite testng xml file to consider for test execution -->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>resources/testng.xml</suiteXmlFile>
+                        <!--<suiteXmlFile>suites-test-testng.xml</suiteXmlFile>-->
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+            <!-- Compiler plugin configures the java version to be usedfor compiling
+                the code -->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>org.seleniumhq.selenium</groupId>-->
-            <!--<artifactId>selenium-java</artifactId>-->
-            <!--<version>3.0.1</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>junit</groupId>-->
-            <!--<artifactId>junit</artifactId>-->
-            <!--<version>4.12</version>-->
-        <!--</dependency>-->
-
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>plugin</artifactId>
-            <version>2.2</version>
-        </dependency>
-
+        <!-- Dependency libraries to include for compilation -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.10</version>
+            <version>6.3.1</version>
         </dependency>
-    <!--<test name="BootCheck" parallel="false" thread-count="1">-->
-        <!--<classes>-->
-            <!--<class name="com.x.automation.y.tests.smoke.BootCheck" />-->
-        <!--</classes>-->
-    <!--</test>-->
     </dependencies>
-    <profiles>
-        <profile>
-            <id>default</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.14.1</version>
-                        <configuration>
-                            <suiteXmlFiles>
-                                <!--<suiteXmlFile>resources/testng/maven_babyAndFamilyStore_smoke_${suite}_TestNG.xml</suiteXmlFile>-->
-                                <suiteXmlFile>resources/testng/TestNG.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                            <!--<systemPropertyVariables>-->
-                            <!--<browser>${browser}</browser>-->
-                            <!--</systemPropertyVariables>-->
-                            <argLine>-Dfile.encoding=UTF-8</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
-
 </project>
+
+
+<!--<?xml version="1.0" encoding="UTF-8"?>-->
+<!--<project xmlns="http://maven.apache.org/POM/4.0.0"-->
+         <!--xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
+         <!--xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
+    <!--<modelVersion>4.0.0</modelVersion>-->
+
+    <!--<groupId>com.kamilburansky</groupId>-->
+    <!--<artifactId>webtest-0</artifactId>-->
+    <!--<version>1.0-SNAPSHOT</version>-->
+
+
+
+
+    <!--&lt;!&ndash;<parent>&ndash;&gt;-->
+        <!--&lt;!&ndash;<groupId>org.jenkins-ci.plugins</groupId>&ndash;&gt;-->
+        <!--&lt;!&ndash;<artifactId>plugin</artifactId>&ndash;&gt;-->
+        <!--&lt;!&ndash;<version>2.2</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</parent>&ndash;&gt;-->
+
+    <!--<dependencies>-->
+        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+            <!--&lt;!&ndash;<groupId>org.seleniumhq.selenium</groupId>&ndash;&gt;-->
+            <!--&lt;!&ndash;<artifactId>selenium-java</artifactId>&ndash;&gt;-->
+            <!--&lt;!&ndash;<version>3.0.1</version>&ndash;&gt;-->
+        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+
+        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+            <!--&lt;!&ndash;<groupId>junit</groupId>&ndash;&gt;-->
+            <!--&lt;!&ndash;<artifactId>junit</artifactId>&ndash;&gt;-->
+            <!--&lt;!&ndash;<version>4.12</version>&ndash;&gt;-->
+        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+
+        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+            <!--&lt;!&ndash;<groupId>org.jenkins-ci.plugins</groupId>&ndash;&gt;-->
+            <!--&lt;!&ndash;<artifactId>plugin</artifactId>&ndash;&gt;-->
+            <!--&lt;!&ndash;<version>2.2</version>&ndash;&gt;-->
+        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.testng</groupId>-->
+            <!--<artifactId>testng</artifactId>-->
+            <!--<version>6.10</version>-->
+        <!--</dependency>-->
+    <!--&lt;!&ndash;<test name="BootCheck" parallel="false" thread-count="1">&ndash;&gt;-->
+        <!--&lt;!&ndash;<classes>&ndash;&gt;-->
+            <!--&lt;!&ndash;<class name="com.x.automation.y.tests.smoke.BootCheck" />&ndash;&gt;-->
+        <!--&lt;!&ndash;</classes>&ndash;&gt;-->
+    <!--&lt;!&ndash;</test>&ndash;&gt;-->
+    <!--</dependencies>-->
+    <!--<profiles>-->
+        <!--<profile>-->
+            <!--<id>default</id>-->
+            <!--<build>-->
+                <!--<plugins>-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                        <!--<version>2.14.1</version>-->
+                        <!--<configuration>-->
+                            <!--<suiteXmlFiles>-->
+                                <!--&lt;!&ndash;<suiteXmlFile>resources/testng/maven_babyAndFamilyStore_smoke_${suite}_TestNG.xml</suiteXmlFile>&ndash;&gt;-->
+                                <!--<suiteXmlFile>resources/testng/TestNG.xml</suiteXmlFile>-->
+                            <!--</suiteXmlFiles>-->
+                            <!--&lt;!&ndash;<systemPropertyVariables>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<browser>${browser}</browser>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</systemPropertyVariables>&ndash;&gt;-->
+                            <!--<argLine>-Dfile.encoding=UTF-8</argLine>-->
+                        <!--</configuration>-->
+                    <!--</plugin>-->
+                <!--</plugins>-->
+            <!--</build>-->
+        <!--</profile>-->
+    <!--</profiles>-->
+
+
+<!--</project>-->
