--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.kamilburansky</groupId>
-    <artifactId>swebtest-0</artifactId>
+    <groupId>com.test.maven</groupId>
+    <artifactId>sample-maven-build</artifactId>
     <version>1</version>
     <name>sample-maven-build</name>
     <build>
@@ -17,8 +17,8 @@
                 <configuration>
                     <!-- Suite testng xml file to consider for test execution -->
                     <suiteXmlFiles>
-                        <suiteXmlFile>main/resources/TestNG.xml</suiteXmlFile>
-                        <!--<suiteXmlFile>suites-test-testng.xml</suiteXmlFile>-->
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>suites-test-testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
@@ -27,8 +27,8 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -42,81 +42,3 @@
         </dependency>
     </dependencies>
 </project>
-
-
-<!--<?xml version="1.0" encoding="UTF-8"?>-->
-<!--<project xmlns="http://maven.apache.org/POM/4.0.0"-->
-         <!--xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
-         <!--xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
-    <!--<modelVersion>4.0.0</modelVersion>-->
-
-    <!--<groupId>com.kamilburansky</groupId>-->
-    <!--<artifactId>webtest-0</artifactId>-->
-    <!--<version>1.0-SNAPSHOT</version>-->
-
-
-
-
-    <!--&lt;!&ndash;<parent>&ndash;&gt;-->
-        <!--&lt;!&ndash;<groupId>org.jenkins-ci.plugins</groupId>&ndash;&gt;-->
-        <!--&lt;!&ndash;<artifactId>plugin</artifactId>&ndash;&gt;-->
-        <!--&lt;!&ndash;<version>2.2</version>&ndash;&gt;-->
-    <!--&lt;!&ndash;</parent>&ndash;&gt;-->
-
-    <!--<dependencies>-->
-        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-            <!--&lt;!&ndash;<groupId>org.seleniumhq.selenium</groupId>&ndash;&gt;-->
-            <!--&lt;!&ndash;<artifactId>selenium-java</artifactId>&ndash;&gt;-->
-            <!--&lt;!&ndash;<version>3.0.1</version>&ndash;&gt;-->
-        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-
-        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-            <!--&lt;!&ndash;<groupId>junit</groupId>&ndash;&gt;-->
-            <!--&lt;!&ndash;<artifactId>junit</artifactId>&ndash;&gt;-->
-            <!--&lt;!&ndash;<version>4.12</version>&ndash;&gt;-->
-        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-
-        <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-            <!--&lt;!&ndash;<groupId>org.jenkins-ci.plugins</groupId>&ndash;&gt;-->
-            <!--&lt;!&ndash;<artifactId>plugin</artifactId>&ndash;&gt;-->
-            <!--&lt;!&ndash;<version>2.2</version>&ndash;&gt;-->
-        <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-
-        <!--<dependency>-->
-            <!--<groupId>org.testng</groupId>-->
-            <!--<artifactId>testng</artifactId>-->
-            <!--<version>6.10</version>-->
-        <!--</dependency>-->
-    <!--&lt;!&ndash;<test name="BootCheck" parallel="false" thread-count="1">&ndash;&gt;-->
-        <!--&lt;!&ndash;<classes>&ndash;&gt;-->
-            <!--&lt;!&ndash;<class name="com.x.automation.y.tests.smoke.BootCheck" />&ndash;&gt;-->
-        <!--&lt;!&ndash;</classes>&ndash;&gt;-->
-    <!--&lt;!&ndash;</test>&ndash;&gt;-->
-    <!--</dependencies>-->
-    <!--<profiles>-->
-        <!--<profile>-->
-            <!--<id>default</id>-->
-            <!--<build>-->
-                <!--<plugins>-->
-                    <!--<plugin>-->
-                        <!--<groupId>org.apache.maven.plugins</groupId>-->
-                        <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                        <!--<version>2.14.1</version>-->
-                        <!--<configuration>-->
-                            <!--<suiteXmlFiles>-->
-                                <!--&lt;!&ndash;<suiteXmlFile>resources/testng/maven_babyAndFamilyStore_smoke_${suite}_TestNG.xml</suiteXmlFile>&ndash;&gt;-->
-                                <!--<suiteXmlFile>resources/testng/TestNG.xml</suiteXmlFile>-->
-                            <!--</suiteXmlFiles>-->
-                            <!--&lt;!&ndash;<systemPropertyVariables>&ndash;&gt;-->
-                            <!--&lt;!&ndash;<browser>${browser}</browser>&ndash;&gt;-->
-                            <!--&lt;!&ndash;</systemPropertyVariables>&ndash;&gt;-->
-                            <!--<argLine>-Dfile.encoding=UTF-8</argLine>-->
-                        <!--</configuration>-->
-                    <!--</plugin>-->
-                <!--</plugins>-->
-            <!--</build>-->
-        <!--</profile>-->
-    <!--</profiles>-->
-
-
-<!--</project>-->
